[metadata]
name = fake-git-commit-history
version = 0.0.1
author = Vish
author_email = vakkati@ucdavis.edu
description = CLI tool to fake GitHub commits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vish-04/fake-git-commit-history
project_urls =
    Bug Tracker = https://github.com/Vish-04/fake-git-commit-history/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
